Tue Aug 05 08:02:19 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/searchconn_process.py: Add comment explaining
	  test case.

Tue Aug 05 07:37:49 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/searchconnection.py: Support ProcessedDocument or
	  UnprocessedDocument objects in the list of ids for
	  query_similar().  As yet untested and undocumented.

Tue Aug 05 06:22:51 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/__init__.py,xappy/fieldactions.py,xappy/searchconnection.py,
	  xappy/unittests/searchconn_process.py,
	  xappy/unittests/weight_external.py: Add support for using an
	  external source of weight information in searches.  This is a bit
	  slow, so probably only useful for small databases, or for
	  off-line testing.  Also, add support for using a SearchConnection
	  to process a document (ie, translating an UnprocessedDocument to
	  a ProcessedDocument) - this can be handy in various odd
	  situations.

Mon Aug 04 17:19:41 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/range_speed.py: Convert to use range search
	  instead of facet ranges, to work with xapian SVN trunk.

Mon Aug 04 07:29:01 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/doctests/searchconnection_doctest1.txt,
	  xappy/doctests/searchconnection_doctest2.txt: Fixes needed for
	  the new xapian packages: percentage rounding has changed again,
	  and the error message when a database can't be found has been
	  changed (for the better).

Mon Aug 04 07:26:18 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* libs/get_xapian.py: Update with details of new xapian packages.

Mon Aug 04 06:34:56 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* utils/make_xappy_tarballs: Update with latest branchpoints.

Sun Aug 03 20:39:26 GMT 2008  Richard Boulton <richard@lemurconsulting.com>

	* xappy/unittests/range_speed.py: Add another test case - this